# nodeflow

./: .gitignore  README.md
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: admin.py  auth.py  health.py  transport_orders.py
apps/backend/app/core/: config.py  exception_handlers.py  exceptions.py  local_secrets.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/db/models/: core.py
apps/backend/app/dependencies/: auth.py  db.py
apps/backend/app/repositories/: admin_repository.py  tenant_repository.py  transport_order_repository.py  user_repository.py
apps/backend/app/schemas/: admin.py  auth.py  health.py  transport_order.py  user.py
apps/backend/app/services/: auth_service.py  transport_order_service.py
apps/backend/backups/: tms_counts_20260429_201725.tsv  tms_full_20260429_201725.dump  tms_full_20260429_201725.sql  tms_full_20260429_201725_pg11_compatible.sql
apps/backend/frontend_web/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  manifest.json  version.json
apps/backend/frontend_web/assets/: AssetManifest.bin.json
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20260429_0100_add_tms_workflow_sequences.py  20260430_0100_add_admin_console_tables.py
apps/backend/nodeflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: test_passwords.py
apps/frontend/: README.md  pubspec.yaml
apps/frontend/lib/: main.dart
apps/frontend/web/: index.html
(+22 files in other folders)
