[project]
name = "nodeflow-backend"
version = "0.1.0"
description = "FastAPI backend for the NodeFlow TMS platform."
requires-python = ">=3.9,<3.15"
dependencies = [
    "alembic>=1.14.0,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "bcrypt>=4.2.0,<6.0",
    "fastapi>=0.115.0,<1.0",
    "pydantic-settings>=2.7.0,<3.0",
    "pyjwt>=2.10.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.32.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.25.0,<2.0",
    "ruff>=0.8.0,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
